# api/controllers/job_controller.py
@@ -1,35 +1,29 @@
+import logging
+
+from datetime import date, datetime
+from typing import Dict, List
+
 import connexion
+from elasticsearch import Elasticsearch, TransportError
+from six import iteritems
+
 from api.models.job import Job
 from api.models.job_step import JobStep
 from api.models.new_job_request import NewJobRequest
-from datetime import date, datetime
-from typing import List, Dict
-from six import iteritems
+
+from ..domain.job import JobData, JobRepository
 from ..util import deserialize_date, deserialize_datetime
 
+logger = logging.getLogger(__name__)
 
-def add_step(tenant_id, job_id, job_step):
-    """
-    add_step
-    Adds an image signature to the database.
-    :param tenant_id: tenant id
-    :type tenant_id: str
-    :param job_id: job id
-    :type job_id: str
-    :param job_step: job step
-    :type job_step: dict | bytes
-
-    :rtype: None
-    """
-    if connexion.request.is_json:
-        job_step = JobStep.from_dict(connexion.request.get_json())
-    return 'do some magic!'
-
+INDEX_NAME = 'kingpick'
+ES = Elasticsearch('http://elasticsearch:9200')
+job_repository = JobRepository(ES, INDEX_NAME)
 
 def create(tenant_id, project_id, new_job_request):
     """
     create
-    Adds an image signature to the database.
+    Adds an new job.
     :param tenant_id: tenant id
     :type tenant_id: str
     :param project_id: project id
@@ -37,11 +31,14 @@ def create(tenant_id, project_id, new_job_request):
     :param new_job_request: new job request
     :type new_job_request: dict | bytes
 
-    :rtype: NewJobRequest
+    :rtype: Job
     """
+
     if connexion.request.is_json:
-        new_job_request = Job.from_dict(connexion.request.get_json())
-    return 'do some magic!'
+        job = JobData(new_job_request, strict=False)
+        job = job_repository.save(tenant_id, project_id, job)
+
+    return Job.from_dict(job.flatten())
 
 
 def end_job(tenant_id, job_id):
@@ -83,4 +80,21 @@ def start_job(tenant_id, job_id):
 
     :rtype: None
     """
+    return 'do some magic!'
+
+def add_step(tenant_id, job_id, job_step):
+    """
+    add_step
+    Adds an image signature to the database.
+    :param tenant_id: tenant id
+    :type tenant_id: str
+    :param job_id: job id
+    :type job_id: str
+    :param job_step: job step
+    :type job_step: dict | bytes
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        job_step = JobStep.from_dict(connexion.request.get_json())
     return 'do some magic!'
