# api/swagger/swagger.yaml
@@ -19,7 +19,7 @@ paths:
       responses:
         200:
           description: "Setup basic infrastructure"
-      x-swagger-router-controller: "kingpick.controllers.default_controller"
+      x-swagger-router-controller: "api.controllers.default_controller"
   /auth/token:
     get:
       tags:
@@ -36,7 +36,7 @@ paths:
             type: "string"
       security:
       - google_id_token: []
-      x-swagger-router-controller: "kingpick.controllers.auth_controller"
+      x-swagger-router-controller: "api.controllers.auth_controller"
   /tenants:
     get:
       tags:
@@ -51,7 +51,7 @@ paths:
           description: "Tenant list"
           schema:
             $ref: "#/definitions/Tenants"
-      x-swagger-router-controller: "kingpick.controllers.tenant_controller"
+      x-swagger-router-controller: "api.controllers.tenant_controller"
     post:
       tags:
       - "tenant"
@@ -71,7 +71,7 @@ paths:
           description: "The newly craeted tenant"
           schema:
             $ref: "#/definitions/Tenant"
-      x-swagger-router-controller: "kingpick.controllers.tenant_controller"
+      x-swagger-router-controller: "api.controllers.tenant_controller"
   /tenants/{tenant_id}:
     get:
       tags:
@@ -91,7 +91,7 @@ paths:
           description: "Tenant list"
           schema:
             $ref: "#/definitions/Tenant"
-      x-swagger-router-controller: "kingpick.controllers.tenant_controller"
+      x-swagger-router-controller: "api.controllers.tenant_controller"
     put:
       tags:
       - "tenant"
@@ -116,7 +116,7 @@ paths:
           description: "The newly craeted tenant"
           schema:
             $ref: "#/definitions/Tenant"
-      x-swagger-router-controller: "kingpick.controllers.tenant_controller"
+      x-swagger-router-controller: "api.controllers.tenant_controller"
   /projects:
     get:
       tags:
@@ -136,7 +136,7 @@ paths:
           description: "Project list"
           schema:
             $ref: "#/definitions/Projects"
-      x-swagger-router-controller: "kingpick.controllers.project_controller"
+      x-swagger-router-controller: "api.controllers.project_controller"
     post:
       tags:
       - "project"
@@ -162,7 +162,7 @@ paths:
           description: "The newly created project"
           schema:
             $ref: "#/definitions/Project"
-      x-swagger-router-controller: "kingpick.controllers.project_controller"
+      x-swagger-router-controller: "api.controllers.project_controller"
   /projects/{project_id}:
     get:
       tags:
@@ -187,7 +187,7 @@ paths:
           description: "A project"
           schema:
             $ref: "#/definitions/Project"
-      x-swagger-router-controller: "kingpick.controllers.project_controller"
+      x-swagger-router-controller: "api.controllers.project_controller"
     put:
       tags:
       - "project"
@@ -217,12 +217,12 @@ paths:
           description: "The newly created project"
           schema:
             $ref: "#/definitions/Project"
-      x-swagger-router-controller: "kingpick.controllers.project_controller"
+      x-swagger-router-controller: "api.controllers.project_controller"
   /jobs:
     post:
       tags:
       - "job"
-      description: "Adds an image signature to the database."
+      description: "Adds an new job."
       operationId: "create"
       produces:
       - "application/json"
@@ -242,13 +242,13 @@ paths:
         description: "new job request"
         required: true
         schema:
-          $ref: "#/definitions/Job"
+          $ref: "#/definitions/NewJobRequest"
       responses:
         201:
-          description: "The newly created image"
+          description: "The newly created Job"
           schema:
-            $ref: "#/definitions/NewJobRequest"
-      x-swagger-router-controller: "kingpick.controllers.job_controller"
+            $ref: "#/definitions/Job"
+      x-swagger-router-controller: "api.controllers.job_controller"
   /jobs/{job_id}:
     get:
       tags:
@@ -273,7 +273,7 @@ paths:
           description: "The newly created image"
           schema:
             $ref: "#/definitions/Job"
-      x-swagger-router-controller: "kingpick.controllers.job_controller"
+      x-swagger-router-controller: "api.controllers.job_controller"
   /jobs/{job_id}/steps:
     post:
       tags:
@@ -302,7 +302,7 @@ paths:
       responses:
         200:
           description: "The newly created image"
-      x-swagger-router-controller: "kingpick.controllers.job_controller"
+      x-swagger-router-controller: "api.controllers.job_controller"
   /jobs/{job_id}/start:
     post:
       tags:
@@ -325,7 +325,7 @@ paths:
       responses:
         202:
           description: "The newly created image"
-      x-swagger-router-controller: "kingpick.controllers.job_controller"
+      x-swagger-router-controller: "api.controllers.job_controller"
   /jobs/{job_id}/end:
     post:
       tags:
@@ -348,7 +348,7 @@ paths:
       responses:
         202:
           description: "The newly created image"
-      x-swagger-router-controller: "kingpick.controllers.job_controller"
+      x-swagger-router-controller: "api.controllers.job_controller"
 securityDefinitions:
   google_id_token:
     type: "oauth2"
@@ -405,10 +405,29 @@ definitions:
         type: "string"
       settings:
         $ref: "#/definitions/Settings"
+  NewJobRequest:
+    type: "object"
+    properties:
+      type:
+        type: "string"
+        description: "Job type"
+        enum:
+        - "csv"
+        - "flickr"
+      auto_start:
+        type: "boolean"
+        description: "create job and start ?"
+        default: false
+      input_params:
+        $ref: "#/definitions/JobInputParameters"
+  JobInputParameters:
+    type: "object"
+    additionalProperties:
+      type: "string"
   Job:
     type: "object"
     properties:
-      job_id:
+      id:
         type: "string"
         description: "Job id."
       version:
@@ -445,26 +464,7 @@ definitions:
       created_by:
         type: "string"
         description: "Job creator"
-      parameters:
-        $ref: "#/definitions/JobInputParameters"
-  JobInputParameters:
-    type: "object"
-    additionalProperties:
-      type: "string"
-  NewJobRequest:
-    type: "object"
-    properties:
-      type:
-        type: "string"
-        description: "Job type"
-        enum:
-        - "csv"
-        - "flickr"
-      auto_start:
-        type: "boolean"
-        description: "create job and start ?"
-        default: false
-      parameters:
+      input_params:
         $ref: "#/definitions/JobInputParameters"
   JobStep:
     type: "object"
